--- a/judgehost/Dockerfile
+++ b/judgehost/Dockerfile
@@ -1,7 +1,7 @@
 # Note that the languages C,C++, Python3, Java, Haskel and Pascal are installed in the main image
-ARG VERSION=8.0.0
+ARG VERSION=8.2.3
 FROM domjudge/judgehost:${VERSION}
-ENV LANG_KOTLIN=yes
+# ENV LANG_KOTLIN=yes
 # Only used for company teams
 ENV LANG_CSHARP=yes
 # Python 2 is no longer an ICPC language
